# GORC

./: CMakeLists.txt  Makefile  Makefile.in  config.status  configure  configure.ac
attic/: GORC1.love  stdout.txt
attic/GORC1/: game.conf  main.lua
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile  Makefile.am  Makefile.in  core.cpp  core.h  game.c  game.cpp_  game.h  gorc.c  main.cpp  screen.cpp  screen.h  singleton.h
src/.deps/: game.Tpo  gorc.Po
src/scripts/: script.lua
